--- a/levels/pages/introduction/introduction.jade
+++ b/levels/pages/introduction/introduction.jade
@@ -32,7 +32,26 @@ block content
 
                 However, when it comes to larger, more complex projects, how you organize your code is a key to efficiency. Not only in how how much time it takes, but also in how much code you write, and how much a browser has to load. This is especially important when you’re working with a team of themers, and when performance is important.
 
-                This also true for long-term projects with legacy code (read "[How to Scale and Maintain Legacy CSS with Sass and SMACSS](http://webuild.envato.com/blog/how-to-scale-and-maintain-legacy-css-with-sass-and-smacss/)" — some nice SMACSS and BEM mixing in there).
+                This also true for long-term projects with legacy code — "[How to Scale and Maintain Legacy CSS with Sass and SMACSS](http://webuild.envato.com/blog/how-to-scale-and-maintain-legacy-css-with-sass-and-smacss/)".
+
+          .grid__row
+            .grid__cell-xs_size_12.raw-text
+              :markdown
+                ## What does BEM solves?
+                
+                Chaos (Greek χάος) — the formless or void state preceding the creation of your project. CSS can be wonderfully simple and easy to get started with. And even easier to mess up on the long run.
+                
+                Legacy CSS without proper structure can be a royal pain. 
+                
+                When project scale, CSS often does not.
+                
+                CSS code is easy to append, overwrite or reinvent. That can turn in to a mess. It is a bit like growing a new haircut every month, but only trimming a pice of it.
+                
+                BEM gives a default approach for new projects:
+                
+                 * Thinking in Blocks, Elements and Modifiers helps you figure out what your design is made of.
+                 * BEM helps you getting started coding a little bit quicker through a standart syntax.
+                 * BEM is about communicating between technologies and the people using them.
 
           .grid__row
             .grid__cell-sm.grid__cell-sm_size_12.raw-text
@@ -65,37 +84,21 @@ block content
               :markdown
                 > We are looking for authors to write proper "[Comparison of methodologies](https://github.com/getbem/getbem.com/issues/11)"
 
-                ## Why BEM over the others?
-
-                No matter what methodology you choose to use in your projects, you will get advantages of structured CSS and UI. Some of them are less strict and more flexible, other is easier to understand and adapt in team. Instead of writting our opinion on BEM advantages, we leave you with some quotes about it:
+          .grid__row
+            .grid__cell-xs_size_12.raw-text
+              :markdown
+                No matter what methodology you choose to use in your projects, you will get advantages of structured CSS and UI. Some of them are less strict and more flexible, other is easier to understand and adapt in team. 
+                
+                In fact BEM is similar to some of them. For example OOCSS is about keeping CSS modular, so it can be reused and extended. This is similar to the Block, Elemetn and Modifier approach. SMACSS has five types of CSS categories: Base, Layout, Module, State and Theme. The Module and State categories are similar analouge for the Block, Element and Modifier approach.
 
           .grid__row
-            .grid__cell-sm.grid__cell-sm_size_6
+            .grid__cell-sm.grid__cell-sm_size_12
               blockquote.blockquote
                 p The reason I choose BEM over other methodologies comes down to this: it's less confusing than the other methods (i.e. SMACSS) but still provides us the good architecture we want (i.e. OOCSS) and with a recognisable terminology.
                 footer
                   | Mark McDonnell, 
                   a(href="http://www.integralist.co.uk/posts/maintainable-css-with-bem/#why-bem-over-the-others") Maintainable CSS with BEM
-            .grid__cell-sm.grid__cell-sm_size_6
-              blockquote.blockquote
-                p I was so happy to start using this, finally I had an order in things, I had a clear system to name elements. It kind of freed a lot of resources in my brain, as puny thing as element naming can still occupy a lot of brainpower. Kinda.
-                footer
-                  | Antti Hiljá, 
-                  a(href="http://clubmate.fi/oocss-acss-bem-smacss-what-are-they-what-should-i-use/") OOCSS, ACSS, BEM, SMACSS: what are they? What should I use?
-          .grid__row
-            .grid__cell-sm.grid__cell-sm_size_6
-              blockquote.blockquote
-                p Unlike OOCss, it doesn’t aim at total modularity, but the opposite: namespacing (through classes names), creating independent modules of css code that don’t interact with each other.
-                footer
-                  | Justin Marsan, 
-                  a(href="http://justinmarsan.com/css-methodology-and-frameworks/") CSS methodology and frameworks
-            .grid__cell-sm.grid__cell-sm_size_6
-              .blockquote
-                p BEM is a highly useful, powerful and simple naming convention to make your front-end code easier to read and understand, easier to work with, easier to scale, more robust and explicit and a lot more strict.
-                footer
-                  | Harry Roberts, 
-                  a(href="http://csswizardry.com/2013/01/mindbemding-getting-your-head-round-bem-syntax/") MindBEMding – getting your head ’round BEM syntax
-
+          
           .grid__row
             .grid__cell-sm.grid__cell-sm_size_12.raw-text
               :markdown
@@ -202,6 +205,32 @@ block content
             .grid__cell-sm.grid__cell-sm_size_12.raw-text
               :markdown
                 ## Benefits
+                
+                [The benefits of BEM CSS](http://www.slideshare.net/BobDonderwinkel/bem-presentation-40907446) by [Bob Donderwinkel](https://twitter.com/bobdonderwinkel).
+                
+          .grid__row
+            .grid__cell-sm.grid__cell-sm_size_4.raw-text
+              :markdown
+                ### Perfomance
+                Single CSS classname perks gives you a better performace: Rendering engines evaluate CSS selectors right to left - the less they have to evaluate, the faster it renders.
+                
+                You can look at [Github's CSS performace](https://speakerdeck.com/jonrohan/githubs-css-performance) for numbers and concrete tips.
+            .grid__cell-sm.grid__cell-sm_size_4.raw-text
+              :markdown
+                ### CSS specificty
+                
+                Complex CSS selectors get a higher importance. You have to match up to this selector or use `!important` to override it.
+                
+                Or find the actual CSS you want to change. But the bigger the CSS code base, the nastier that can get.
+                
+                Using singe CSS classnames makes it easier to rework your existing CSS code base.
+            .grid__cell-sm.grid__cell-sm_size_4.raw-text
+              :markdown
+                ### Better decoupling
+                
+                Using HTML elements names in your CSS selectors forces you to update both when only one chnages.
+                
+                Using just single CSS BEM classnames makes them more portable to another HTML structure.
           .grid__row
             .grid__cell-sm.grid__cell-sm_size_4.raw-text
               :markdown
@@ -236,8 +265,8 @@ block content
           ul.nav.nav_pills.nav_stacked
             - var headings = [];
             - headings.push('Introduction');
+            - headings.push('What does BEM solves?');
             - headings.push('Methodologies');
-            - headings.push('Why BEM over the others?');
             - headings.push('Blocks, Elements and Modifiers');
             - headings.push('Under the hood');
             - headings.push('Benefits');
